<resources>
    <string name="app_name">Inventory2</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="supplier_phone_number">Phone_Number</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="product_name">Product Name</string>
    <string name="insert_data_failed">insert data failed</string>
    <string name="insert_data_successful">Your data inserted successfully</string>
    <string name="sale">sale</string>
    <string name="insert_your_data">insert your data</string>
    <string name="contactsupplier">contactSupplier</string>
    <string name="delet_data">Delet data</string>
    <string name="do_you_want_to_delete_data">Do you want to delete data</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="edit">Edit</string>
    <string name="change_successful">your data changed successfully</string>
</resources>
