<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"/>
        <TextView
            android:layout_marginLeft="16dp"
            android:id="@+id/detail_product_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">
       <TextView
           android:layout_marginLeft="16dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/price"/>
       <TextView
           android:layout_marginLeft="16dp"
           android:id="@+id/detail_price_tv"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />
   </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"/>
        <TextView
            android:layout_marginLeft="16dp"
            android:id="@+id/detail_quantity_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageButton
            android:id="@+id/increase_quantity_ib"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_arrow_drop_up_black_24dp"
            />
        <ImageButton
            android:id="@+id/decrease_quantity_ib"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_arrow_drop_down_black_24dp"/>
    </LinearLayout>

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">
       <TextView
           android:layout_marginLeft="16dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/supplier_name"/>
       <TextView
           android:layout_marginLeft="16dp"
           android:id="@+id/detail_supplier_tv"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />
   </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_phone_number"/>
        <TextView
            android:layout_marginLeft="16dp"
            android:id="@+id/detail_supplier_phone_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_marginLeft="16dp"
            android:id="@+id/contact_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactsupplier"
            android:textAllCaps="false"/>
        <Button
            android:layout_marginLeft="16dp"
            android:id="@+id/delet_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delet_data"
            android:textAllCaps="false"/>
    </LinearLayout>


</LinearLayout>