<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertionActivity"
    android:layout_margin="28dp"
    android:orientation="vertical">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="28dp"
            android:layout_marginVertical="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/insertion_product_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                />

            <EditText
                android:id="@+id/product_name_et"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="28dp"
            android:layout_marginVertical="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price" />

            <EditText
                android:id="@+id/price_et"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="28dp"
            android:layout_marginVertical="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity" />

            <EditText
                android:id="@+id/quantity_et"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="28dp"
            android:layout_marginVertical="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supplier_name" />

            <EditText
                android:id="@+id/supplier_name_et"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"            android:layout_marginHorizontal="28dp"
            android:layout_marginVertical="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supplier_phone_number" />

            <EditText
                android:id="@+id/supplier_phone_number_et"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"/>
        </LinearLayout>

<Button
    android:id="@+id/save_b"
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:text="savedata"/>


</LinearLayout>